@@ -122,9 +122,6 @@ class FamilySidebarFilter(SidebarFilter):
         self.mtype.child.set_text('')
         self.generic.set_active(0)
 
-    def clicked(self, obj):
-        self.clicked_func()
-
     def get_filter(self):
         gid = unicode(self.filter_id.get_text()).strip()
         father = unicode(self.filter_father.get_text()).strip()
