@@ -1,4 +1,5 @@
 2006-12-02  Alex Roitman  <shura@gramps-project.org>
+	* src/Filters/SideBar/*SidebarFilter.py: Busy cursor when filtering.
 	* src/plugins/Check.py (check_repo_references): Add new check.
 
 2006-12-01  Brian Matherly  <brian@gramps-project.org>
